install_data(
  [
    join_paths('icons', 'caffeine-cup-empty-symbolic.svg'),
    join_paths('icons', 'caffeine-cup-full-symbolic.svg')
  ],
  install_dir: join_paths(
    get_option('datadir'), 'icons', 'hicolor', 'scalable', 'status'
  )
)

install_data(
  app_id + '.gschema.xml',
  install_dir: join_paths(get_option('datadir'), 'glib-2.0', 'schemas')
)
